# roscon2025_workshop

./: .gitignore  README.md
.github/workflows/: ros2-ci.yml
docker/: Dockerfile  run_docker.sh
docker/installation_scripts/: easynav_exercises_setup.sh  easynavigation_setup.sh  exercises_setup.sh  nav2_setup.sh  workshop_all.sh
easynav_workshop/easynav_patrolling_behavior/: CMakeLists.txt
easynav_workshop/easynav_patrolling_behavior/include/easynav_patrolling_behavior/: PatrollingNode.hpp
easynav_workshop/easynav_patrolling_behavior/src/easynav_patrolling_behavior/: PatrollingNode.cpp
easynav_workshop/easynav_patrolling_behavior_py/config/: patrolling_params.yaml
easynav_workshop/easynav_patrolling_behavior_py/easynav_patrolling_behavior_py/: patrolling_node.py  setup.cfg  setup.py
easynav_workshop/easynav_patrolling_behavior_py/easynav_patrolling_behavior_py/easynav_patrolling_behavior_py/: patrolling_node.py
easynav_workshop/easynav_patrolling_behavior_py/easynav_patrolling_behavior_py/test/: test_flake8.py
easynav_workshop/easynav_patrolling_behavior_py/launch/: patrolling.launch.py
easynav_workshop/easynav_workshop_planner/: CMakeLists.txt  easynav_workshop_planner_plugins.xml
easynav_workshop/easynav_workshop_planner/src/easynav_workshop_planner/: WorkshopPlanner.cpp
easynav_workshop/easynav_workshop_testcase/: CMakeLists.txt  README.md
easynav_workshop/easynav_workshop_testcase/exercises/1.basic_config/: README.md  costmap_workshop.params.yaml
easynav_workshop/easynav_workshop_testcase/exercises/2.using_easynav_tools/: costmap_mppi.params.yaml
easynav_workshop/easynav_workshop_testcase/exercises/2.using_easynav_tools/solution/: costmap_mppi.params.yaml
easynav_workshop/easynav_workshop_testcase/exercises/3.patrolling/: README.md
easynav_workshop/easynav_workshop_testcase/exercises/3.patrolling/solutions/: PatrollingNode.cpp  patrolling_node.py
easynav_workshop/easynav_workshop_testcase/exercises/4.add_custom_navstate/: README.md  custom.params.yaml
easynav_workshop/easynav_workshop_testcase/rviz/: costmap.rviz
exercises/easynav/1.basic_config/: README.md  costmap_workshop.params.yaml
exercises/easynav/2.custom_plugin/: README.md
exercises/easynav/2.using_easynav_tools/: README.md  costmap_mppi.params.yaml
exercises/easynav/2.using_easynav_tools/solution/: costmap_mppi.params.yaml
exercises/easynav/3.gridmap_patrolling/: README.md
exercises/easynav/3.patrolling/: README.md
exercises/easynav/3.patrolling/solutions/: PatrollingNode.cpp
exercises/easynav/3.using_navmap/: README.md
exercises/easynav/3.using_navmap/solution/: navmap.params.yaml
exercises/easynav/4.add_custom_navstate/: README.md
exercises/easynav/4.add_custom_navstate/solutions/: WorkshopPlanner.cpp
exercises/easynav/4.gridmap_patrolling/: README.md
exercises/easynav/4.using_navmap/: README.md  navmap.params.yaml
exercises/easynav/5.using_navmap/: README.md  navmap.params.urjc.yaml
exercises/easynav/easynav_patrolling_behavior/: package.xml
exercises/easynav/easynav_patrolling_behavior/include/easynav_patrolling_behavior/: PatrollingNode.hpp
exercises/easynav/easynav_playground/easynav_patrolling_behavior/config/: patrolling_params.yaml
exercises/easynav/easynav_playground/easynav_patrolling_behavior/include/easynav_patrolling_behavior/: PatrollingNode.hpp
exercises/easynav/easynav_playground/easynav_patrolling_behavior/src/: patrolling_main.cpp
exercises/easynav/easynav_playground/easynav_patrolling_behavior_py/: package.xml  setup.cfg
exercises/easynav/easynav_playground/easynav_patrolling_behavior_py/config/: patrolling_params.yaml
exercises/easynav/easynav_playground/easynav_patrolling_behavior_py/easynav_patrolling_behavior_py/: patrolling_node.py
exercises/easynav/easynav_playground/easynav_patrolling_behavior_py/test/: test_pep257.py
exercises/easynav/easynav_playground/easynav_workshop_planner/: package.xml
exercises/easynav/easynav_playground/easynav_workshop_planner/include/easynav_workshop_planner/: WorkshopPlanner.hpp
exercises/easynav/easynav_playground/easynav_workshop_planner/src/easynav_workshop_planner/: WorkshopPlanner.cpp
exercises/easynav/easynav_playground/easynav_workshop_testcase/: CMakeLists.txt  README.md  package.xml
exercises/easynav/easynav_playground/easynav_workshop_testcase/config/: custom.params.yaml  gridmap_workshop.params.yaml  navmap.params.yaml
exercises/easynav/easynav_playground/easynav_workshop_testcase/rviz/: gridmap.rviz
exercises/easynav/easynav_workshop_testcase/: package.xml
exercises/easynav/easynav_workshop_testcase/exercises/1.basic_config/: README.md
exercises/nav2/: navigating.md  params.md  patrolling_exercise.md  slam.md
exercises/nav2/1.map_generation/: README.md
exercises/nav2/2.basic_navigation/: README.md
exercises/nav2/3.params_configuration/: README.md
exercises/nav2/4.patrolling/: README.md
exercises/nav2/nav2_playground/: CMakeLists.txt
exercises/nav2/nav2_playground/config/: multirobot_config.yaml  nav2_kobuki_params.yaml  slam_view.rviz
exercises/nav2/nav2_playground/scripts/: waypoint_client_node.py
exercises/nav2/nav2_playground/src/nav2_playground/: waypoint_client_node.cpp
exercises/nav2/nav2_playground/src/plugins/: print_pick_task_executor.cpp
exercises/nav2/nav2_playground/test/: test_patrol_launch.py  test_slam_launch.py
nav2_playground/: README.md  package.xml  plugins.xml  thirdparty.repos
nav2_playground/config/: patrolling_params.yaml  slam_params.yaml
nav2_playground/include/nav2_playground/: patrolling_node.hpp  patrolling_node_template.hpp
nav2_playground/include/nav2_playground/plugins/: print_pick_task_executor.hpp
nav2_playground/launch/: navigation_launch.py  patrolling_launch.py  playground_kobuki.launch.py  slam_launch.py
nav2_playground/scripts/: patrolling_node.py  patrolling_node_template.py  waypoint_client_node.py
nav2_playground/src/: patrolling_node_main.cpp
nav2_playground/src/nav2_playground/: patrolling_node.cpp  patrolling_node_template.cpp
(+1 files in other folders)
