<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_playground</name>
  <version>0.0.1</version>
  <description>Nav2 playground for navigation workshop</description>
  <maintainer email="juan97pena@gmail.com">juandpenan</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <exec_depend>aws_robomaker_small_house_world</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>nav_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_waypoint_follower plugin="${prefix}/plugins.xml"/>
  </export>
</package>
